* bbbike5: use tabular layout for start/goal entries, fixing many   layout problems

--- a/html/bbbike5/autocomplete.css
+++ b/html/bbbike5/autocomplete.css
@@ -1,7 +1,6 @@
 .ac_conteiner {
 	border: 1px solid #abadb3;
 	height: 20px;
-	display: inline-block;
 }
 
 .ac_input {
